Update azure-pipeline.yml for Azure Pipelines

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -23,7 +23,7 @@ jobs:
       inputs:
         apkFiles: '**/*.apk'
         apksign: false
-        apksignerKeystoreFile: key.jks
+        #apksignerKeystoreFile: key.jks
         apksignerKeystorePassword: $(keypassword)
         apksignerKeystoreAlias: $(key)
         apksignerKeyPassword: $(keypassword)
