--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     - task: FlutterInstall@0
       inputs:
         channel: 'stable'
-        version: 'latest'
+        version: '2.5.3'
     
     - task: FlutterBuild@0
       inputs:
